First pass on inputing data.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,58 @@
 <!doctype html>
 <html>
 	<head>
+		<link rel="stylesheet" href="/css/main.css" />
+		<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 	</head>
 	<body>
-		Hello
+		<div id="header"></div>
+		<img id="header_img" src="assets/max_profile.jpg" />
+		<div id="content_background">
+			<div id="internal_content">
+				<div class="label_content">
+					<h1>Introduction</h1>
+				</div>
+				<div class="space"></div>
+				<div class="block_content">
+					<h1>Max Klinman</h1>
+					<p>
+						Programmer / Web Designer <br>
+						Passionate and hardworking; always excited to learn new things.
+					</p>
+					<p>
+						Current Occupation: Student @ 
+						<a href ="https://www.uci.edu">UCI</a><br>
+						Major: Computer Science
+					</p>
+				</div>
+				<!-- Section Projects -->
+				<div class="label_content">
+					<h1>Projects</h1>
+				</div>
+				<div class="space"></div>
+				<div class="block_content">
+					<h1>BananaToken Arcade</h1>
+					<div class="block_content_description">
+						<p>
+							<i>BananaToken Arcade</i> is my personal collection of
+							HTML5 and Flash games that I've developed. The website
+							also has a user registration and login system run behind the
+							scenes in a MySQL database. The backend is comprised of a
+							mix of NodeJS and PHP.
+						</p>
+						<p>
+							The source code the games is available 
+							<a href="https://www.github.com/Bloxore/Banana-Token-Games-2.0">
+								here.
+							</a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
+	<footer>
+		<script src="js/main.js"></script>
+	</footer>
 </html>
