--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div id="internal_content"></div>
 		</div>
 		<div id="footer_info">
-			<p>(C) 2020 Max Klinman</p>
+			<p>(C) 2022 Ashley Klinman</p>
 		</div>
 	</body>
 	<footer>
